Update Readme and add data volume to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - PORT=8080
       - GIN_MODE=release
+      - DATA_PATH=/app/data
     volumes:
       - ./data:/app/data:ro
     networks:
